[gd_scene load_steps=16 format=2]

[ext_resource path="res://tscn/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/NewSubjectDialog.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Cette leçon est déjà enregistrée." ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.160784, 0.666667, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.054902, 0.67451, 0.00392157, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "lesson_already_exists"

[sub_resource type="Animation" id=12]
resource_name = "lesson_saved"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Leçon enregistrée !", "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.160784, 0.666667, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.160784, 0.666667, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/VBoxContainer/Body/VBoxContainer/Notification:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.054902, 0.67451, 0.00392157, 1 ) ]
}

[node name="NewSubjectDialog" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Panel" parent="." index="1"]
margin_top = -266.0
margin_bottom = 235.0

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
text = "Gérer les cours et les matières"

[node name="Body" parent="Panel/VBoxContainer" index="1"]
margin_bottom = 441.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Body" index="0"]
margin_left = 32.0
margin_top = 45.0
margin_right = 767.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 38

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="0"]
margin_right = 735.0
margin_bottom = 20.0
custom_constants/separation = 15
alignment = 1

[node name="DisciplineBtn" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer" index="0"]
visible = false
margin_left = 194.0
margin_right = 270.0
margin_bottom = 20.0
text = "Discipline"

[node name="SubjectBtn" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer" index="1"]
margin_left = 239.0
margin_right = 307.0
margin_bottom = 20.0
text = "Matières"

[node name="LessonBtn" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer" index="2"]
margin_left = 322.0
margin_right = 370.0
margin_bottom = 20.0
text = "Cours"

[node name="LocationBtn" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer" index="3"]
margin_left = 385.0
margin_right = 495.0
margin_bottom = 20.0
text = "Etablissements"

[node name="DisciplineGrid" type="GridContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="1"]
visible = false
margin_top = 58.0
margin_right = 747.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 180 )
custom_constants/vseparation = 20
custom_constants/hseparation = 10
columns = 3

[node name="AddDisciplineLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="0"]
margin_top = 13.0
margin_right = 227.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Ajouter une nouvelle discipline:"

[node name="AddDisciplineLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="1"]
margin_left = 237.0
margin_right = 617.0
margin_bottom = 40.0
rect_min_size = Vector2( 380, 40 )
max_length = 60
placeholder_text = "ex: Histoire"

[node name="CreateDisciplineButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="2"]
margin_left = 627.0
margin_right = 747.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Ajouter"

[node name="RemoveDisciplineLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="3"]
margin_top = 73.0
margin_right = 227.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Supprimer une discipline existante:"

[node name="RemoveDisciplineOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="4"]
margin_left = 237.0
margin_top = 60.0
margin_right = 617.0
margin_bottom = 100.0
rect_min_size = Vector2( 380, 40 )
clip_text = true

[node name="RemoveDisciplineButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/DisciplineGrid" index="5"]
margin_left = 627.0
margin_top = 60.0
margin_right = 747.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.282353, 0.282353, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Supprimer"

[node name="SubjectGrid" type="GridContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="2"]
margin_top = 58.0
margin_right = 735.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 180 )
custom_constants/vseparation = 20
custom_constants/hseparation = 10
columns = 3

[node name="AddSubjectLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="0"]
margin_top = 13.0
margin_right = 215.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Ajouter une nouvelle matière:"

[node name="AddSubjectLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="1"]
margin_left = 225.0
margin_right = 605.0
margin_bottom = 40.0
rect_min_size = Vector2( 380, 40 )
max_length = 60
placeholder_text = "ex: Histoire contemporaine"

[node name="CreateButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="2"]
margin_left = 615.0
margin_right = 735.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Ajouter"

[node name="RemoveSubjectLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="3"]
margin_top = 73.0
margin_right = 215.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Supprimer une matière existante:"

[node name="RemoveSubjectOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="4"]
margin_left = 225.0
margin_top = 60.0
margin_right = 605.0
margin_bottom = 100.0
rect_min_size = Vector2( 380, 40 )
text = "Sélectionnez une matière à supprimer"
clip_text = true

[node name="RemoveSubjectButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid" index="5"]
margin_left = 615.0
margin_top = 60.0
margin_right = 735.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.282353, 0.282353, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Supprimer"

[node name="LessonGrid" type="GridContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="3"]
visible = false
margin_top = 58.0
margin_right = 704.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 180 )
custom_constants/vseparation = 20
custom_constants/hseparation = 10
columns = 3

[node name="DefineLessonSubjectLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="0"]
margin_top = 13.0
margin_right = 184.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Matière du nouveau cours :"

[node name="DefineLessonSubjectOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="1"]
margin_left = 194.0
margin_right = 574.0
margin_bottom = 40.0
rect_min_size = Vector2( 380, 40 )

[node name="Container" type="Container" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="2"]
margin_left = 584.0
margin_right = 704.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddLessonLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="3"]
margin_top = 73.0
margin_right = 184.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Titre du nouveau cours :"

[node name="AddLessonLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="4"]
margin_left = 194.0
margin_top = 60.0
margin_right = 574.0
margin_bottom = 100.0
rect_min_size = Vector2( 380, 40 )
max_length = 90
placeholder_text = "ex: Les pionniers de l'informatique (1950-1970)"

[node name="CreateLessonButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="5"]
margin_left = 584.0
margin_top = 60.0
margin_right = 704.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Ajouter"

[node name="RemoveLessonLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="6"]
margin_top = 133.0
margin_right = 184.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Supprimer un cours existant:"

[node name="RemoveLessonOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="7"]
margin_left = 194.0
margin_top = 120.0
margin_right = 574.0
margin_bottom = 160.0
rect_min_size = Vector2( 380, 40 )
clip_text = true

[node name="RemoveLessonButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid" index="8"]
margin_left = 584.0
margin_top = 120.0
margin_right = 704.0
margin_bottom = 160.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.282353, 0.282353, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Supprimer"

[node name="LocationGrid" type="GridContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="4"]
visible = false
margin_top = 394.0
margin_right = 706.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 180 )
custom_constants/vseparation = 20
custom_constants/hseparation = 10
columns = 3

[node name="AddLocationLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="0"]
margin_top = 13.0
margin_right = 186.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Ajouter un établissement:"

[node name="AddLocationLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="1"]
margin_left = 196.0
margin_right = 576.0
margin_bottom = 40.0
rect_min_size = Vector2( 380, 40 )
max_length = 90
placeholder_text = "ex: Clignancourt"

[node name="AddLocationButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="2"]
margin_left = 586.0
margin_right = 706.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.227451, 0.494118, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Ajouter"

[node name="RemoveLocationLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="3"]
margin_top = 73.0
margin_right = 186.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Supprimer un établissement:"

[node name="RemoveLocationOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="4"]
margin_left = 196.0
margin_top = 60.0
margin_right = 576.0
margin_bottom = 100.0
rect_min_size = Vector2( 380, 40 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveLocationButton" type="Button" parent="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid" index="5"]
margin_left = 586.0
margin_top = 60.0
margin_right = 706.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
custom_colors/font_color_hover = Color( 1, 0.282353, 0.282353, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Supprimer"

[node name="Notification" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer" index="5"]
modulate = Color( 0.160784, 0.666667, 0, 0 )
margin_top = 276.0
margin_right = 735.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.054902, 0.67451, 0.00392157, 1 )
text = "Cette leçon est déjà enregistrée."
align = 1
valign = 1

[node name="Foot" parent="Panel/VBoxContainer" index="2"]
margin_top = 441.0
margin_bottom = 501.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 340.0
margin_top = 15.0
margin_right = 460.0
margin_bottom = 45.0

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="0"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Fermer"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 10 )
anims/lesson_already_exists = SubResource( 11 )
anims/lesson_saved = SubResource( 12 )

[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer/DisciplineBtn" to="." method="_on_DisciplineBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer/SubjectBtn" to="." method="_on_SubjectBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer/LessonBtn" to="." method="_on_LessonBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/ButtonsContainer/LocationBtn" to="." method="_on_LocationBtn_pressed"]
[connection signal="text_entered" from="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid/AddSubjectLineEdit" to="." method="_on_AddSubjectLineEdit_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/SubjectGrid/RemoveSubjectButton" to="." method="_on_RemoveSubjectButton_pressed"]
[connection signal="text_entered" from="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid/AddLessonLineEdit" to="." method="_on_AddLessonLineEdit_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid/CreateLessonButton" to="." method="_on_CreateLessonButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/LessonGrid/RemoveLessonButton" to="." method="_on_RemoveLessonButton_pressed"]
[connection signal="text_entered" from="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid/AddLocationLineEdit" to="." method="_on_AddLocationLineEdit_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid/AddLocationButton" to="." method="_on_AddLocationButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/VBoxContainer/LocationGrid/RemoveLocationButton" to="." method="_on_RemoveLocationButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
